--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Ben's Portfolio</title>
+  </head>
+  <body>
+<h1>TESTING!</h1>
+  </body>
+</html>
